fixes dark mode errors

--- a/src/components/Accordeon/styles.module.scss
+++ b/src/components/Accordeon/styles.module.scss
@@ -3,6 +3,7 @@
     background: var(--background-1);
     border-radius: 30px;
     transition: 0.2s ease-in-out;
+    color: var(--background-1);
 
     .head {
         display: flex;
