--- a/src/components/Searchbar/styles.module.scss
+++ b/src/components/Searchbar/styles.module.scss
@@ -98,6 +98,7 @@
     transition: 0.2s ease;
     width: 100%;
     background: var(--background-1);
+    color: var(--foreground-1);
 
     &:focus,
     &:active {
